Add scheduling workflows and UI feedback